--- a/EstablecimientoPanelDeControl/EstablecimientoPanelDeControl.csproj
+++ b/EstablecimientoPanelDeControl/EstablecimientoPanelDeControl.csproj
@@ -147,10 +147,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Establecimiento.cs" />
+    <Compile Include="Models\Evoluciones.cs" />
     <Compile Include="Models\EstablecimientoModel.cs" />
-    <Compile Include="Models\Sector.cs" />
+    <Compile Include="Models\Practicas.cs" />
+    <Compile Include="Models\SectorModel.cs" />
+    <Compile Include="Models\Medicos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio\EstablecimientoRepositorio.cs" />
+    <Compile Include="ViewModels\PanelViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -191,6 +195,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Establecimiento\Panel.cshtml" />
+    <Content Include="Views\Establecimiento\Paciente.cshtml" />
+    <Content Include="Views\Establecimiento\Sector.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
