--- a/EstablecimientoPanelDeControl/bin/EstablecimientoPanelDeControl.dll.config
+++ b/EstablecimientoPanelDeControl/bin/EstablecimientoPanelDeControl.dll.config
@@ -61,7 +61,7 @@
   <connectionStrings>
     <!--<add name="getconn" connectionString="data source=ST15435;initial catalog=bd_rebasa_20190810;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <!--<add name="getconn" connectionString="data source=192.168.11.102,14332;initial catalog=klinicosNiños20190624;persist security info=True;user id=sa;password=sql2018*;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="getconn" connectionString="data source=172.16.127.5;initial catalog=Klinicos_B;persist security info=True;user id=sa;password=sql2018*;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="getconn" connectionString="data source=localhost;initial catalog=Klinicos ;persist security info=True;user id=sa;password=sql2018*;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   <!--<add name="klinicos_interno" connectionString="data source=ST15435;initial catalog=KLINICOS_INTERNO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 </configuration>
